--- a/gom/guest/acct-register.html
+++ b/gom/guest/acct-register.html
@@ -104,7 +104,7 @@ United States
                                 going to send her Jimin pics</label>
                         </div>
                         <div class="form-group">
-                            <a href="../user/acct-registered.html" class="btn btn-primary btn-lg btn-block mt-3">Register</a>
+                            <a href="../user/index.html" class="btn btn-primary btn-lg btn-block mt-3">Register</a>
                         </div>
 
                     </div>
