--- a/gom/guest/header.html
+++ b/gom/guest/header.html
@@ -7,7 +7,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <a href="marketplace.html" class="btn btn-success my-2 my-sm-0">Marketplace</a>
+                <a href="marketplace.html" class="btn btn-secondary my-2 my-sm-0">Marketplace</a>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="go-summary.html">My Purchases</a>
                 </li>
@@ -20,13 +20,13 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
             </form>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false"><img
-                            class="top-timeline-tweet-box-user-image avatar size32" src="../images/avatar.png"
+                            class="border border-secondary" src="../images/avatar.png"
                             style="width:28px; height:28px; border-radius: 50%;" alt="guest"></a>
                     <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdown01">
                         <h6 class="dropdown-header">Welcome!</h6>
