--- a/gom/index.html
+++ b/gom/index.html
@@ -48,7 +48,7 @@
           </a>
         </div>
         <div class="card text-center mt-3 mb-3">
-          <a class="btn btn-info" href="user/index.html">
+          <a class="btn btn-success" href="user/index.html">
             <div class="card-body">
               <h1>User</h1>
             </div>
