--- a/gom/user/header.html
+++ b/gom/user/header.html
@@ -39,12 +39,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <a href="gom-new-form-1.html" class="btn btn-success my-2 my-sm-0">New Group Order</a>
+                <a href="marketplace.html" class="btn btn-success my-2 my-sm-0">Marketplace</a>
                 <li class="nav-item">
                     <a class="nav-link" href="go-summary.html">My Purchases</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="gom-dashboard.html">Dashboard</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="msg-inbox.html">Messages</a>
@@ -58,7 +55,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false"><img
-                            class="top-timeline-tweet-box-user-image avatar size32" src="../images/avatar.jpg"
+                            class="border border-success" src="../images/avatar.jpg"
                             style="width:28px; height:28px; border-radius: 50%;" alt="wiznaibus"></a>
                     <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdown01">
                         <h6 class="dropdown-header">Welcome, wiznaibus</h6>
