--- a/gom/user/index.html
+++ b/gom/user/index.html
@@ -33,7 +33,7 @@
           <h1 class="display-3">wizGOM</h1>
           <p>Blurb about how wizGOM simplifies group orders and is amazing and everybody should use it. Also wiz
             is cool and you should tell her so and send her pictures of Jimin.</p>
-          <p><a class="btn btn-primary btn-lg" href="acct-register.html" role="button">Sign Up <i class="fas fa-angle-right"></i></a></p>
+          <p><a class="btn btn-primary btn-lg" href="marketplace.html" role="button">View Marketplace <i class="fas fa-angle-right"></i></a></p>
         </div>
       </div>
 
@@ -52,7 +52,7 @@
             <h2>Sell</h2>
             <p>Donec id elit non mi porta gravida at eget metus. You're one of the people who likes having way too much
               work to do and selling this shit. And for what? So people can buy this shit, or because you're a masochist. We may never know. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="gom-new-form-1.html" role="button">Create Group Order <i
+            <p><a class="btn btn-secondary" href="gom-register.html" role="button">Register Manager Account <i
                   class="fas fa-angle-right"></i></a></p>
           </div>
           <!-- <div class="col-md-4">
