--- a/gom/acct-blacklist.html
+++ b/gom/acct-blacklist.html
@@ -1,129 +1,91 @@
-<!doctype html>
-<html lang="en">
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+  <h1 class="h2">Blacklist</h1>
+</div>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="../dashboard.css" rel="stylesheet">
-  <title>wizGOM</title>
-</head>
+<div class="alert alert-info" role="alert">
+  <i class="fas fa-info-circle"></i> Blacklisted users are unable to view your public group orders and cannot send you
+  messages. Active group orders you are participating in are unaffected by these restrictions.
+</div>
 
-<body>
-
-  <header id="header"></header>
-
-  <div class="container-fluid">
-
-    <div id="sidebar"></div>
-
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <div
-        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Blacklist</h1>
+<div class="d-flex flex-wrap">
+  <div class="w-25 p-1">
+    <div class="card">
+      <div class="card-body">
+        <div class="d-flex justify-content-between">
+          <h5><a href="user-profile.html">wiznotbus</a></h5>
+          <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
+              class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+            <h6 class="dropdown-header">Actions</h6>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from
+              blacklist</a>
+          </div>
+        </div>
       </div>
-
-      <div class="alert alert-info" role="alert">
-          <i class="fas fa-info-circle"></i> Blacklisted users are unable to view your public group orders and cannot send you messages. Active group orders you are participating in are unaffected by these restrictions.
-      </div>
-
-      <div class="d-flex flex-wrap">
-          <div class="w-25 p-1">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex justify-content-between">
-                      <h5><a href="user-profile.html">wiznotbus</a></h5>
-                      <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
-                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                          <h6 class="dropdown-header">Actions</h6>
-                          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from blacklist</a>
-                      </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="w-25 p-1">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex justify-content-between">
-                      <h5><a href="user-profile.html">shitty customer #1</a></h5>
-                      <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
-                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                          <h6 class="dropdown-header">Actions</h6>
-                          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from blacklist</a>
-                      </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="w-25 p-1">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex justify-content-between">
-                      <h5><a href="user-profile.html">shitty customer #4</a></h5>
-                      <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
-                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                          <h6 class="dropdown-header">Actions</h6>
-                          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from blacklist</a>
-                      </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="w-25 p-1">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex justify-content-between">
-                      <h5><a href="user-profile.html">other wiz</a></h5>
-                      <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
-                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                          <h6 class="dropdown-header">Actions</h6>
-                          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from blacklist</a>
-                      </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="w-25 p-1">
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex justify-content-between">
-                      <h5><a href="user-profile.html">namjoon-lookalike</a></h5>
-                      <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
-                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                          <h6 class="dropdown-header">Actions</h6>
-                          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from blacklist</a>
-                      </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-      </div>
-
-
-
-      <footer id="footer"></footer>
-    </main>
+    </div>
   </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script type="text/javascript">
-    $(function () {
-      $("#header").load("header.html");
-      $("#footer").load("footer.html");
-      $("#sidebar").load("acct-sidebar.html");
-    });
-  </script>
-</body>
-
-</html>
+  <div class="w-25 p-1">
+    <div class="card">
+      <div class="card-body">
+        <div class="d-flex justify-content-between">
+          <h5><a href="user-profile.html">shitty customer #1</a></h5>
+          <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
+              class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+            <h6 class="dropdown-header">Actions</h6>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from
+              blacklist</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="w-25 p-1">
+    <div class="card">
+      <div class="card-body">
+        <div class="d-flex justify-content-between">
+          <h5><a href="user-profile.html">shitty customer #4</a></h5>
+          <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
+              class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+            <h6 class="dropdown-header">Actions</h6>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from
+              blacklist</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="w-25 p-1">
+    <div class="card">
+      <div class="card-body">
+        <div class="d-flex justify-content-between">
+          <h5><a href="user-profile.html">other wiz</a></h5>
+          <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
+              class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+            <h6 class="dropdown-header">Actions</h6>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from
+              blacklist</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="w-25 p-1">
+    <div class="card">
+      <div class="card-body">
+        <div class="d-flex justify-content-between">
+          <h5><a href="user-profile.html">namjoon-lookalike</a></h5>
+          <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
+              class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+            <h6 class="dropdown-header">Actions</h6>
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#unblacklistModal">Remove from
+              blacklist</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
