--- a/gom/acct-settings.html
+++ b/gom/acct-settings.html
@@ -1,70 +1,24 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="../dashboard.css" rel="stylesheet">
-  <title>wizGOM</title>
-</head>
-
-<body>
-
-  <header id="header"></header>
-
-  <div class="container-fluid">
-
-    <div id="sidebar"></div>
-
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <div
-        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
-        <h1 class="h2">Settings</h1>
-      </div>
-      <table class="table table-sm">
-            <tbody>
-                <tr>
-                    <th class="pt-3" scope="row">Name:</th>
-                    <td class="pt-3"><input class="form-control" type="text" value="wiznaibus" /></td>
-                </tr>
-                <tr>
-                    <th scope="row">Email Address:</th>
-                    <td><input class="form-control" type="text" value="wiznaibuswaltz@gmail.com" /></td>
-                </tr>
-                <tr>
-                    <th scope="row">Password:</th>
-                    <td><input class="form-control" type="password" value="nevergonnagiveyouup" /></td>
-                </tr>
-                <tr>
-                    <th scope="row">Confirm password:</th>
-                    <td><input class="form-control" type="password" value="nevergonnagiveyouup" /></td>
-                </tr>
-            </tbody>
-        </table>
-        <button type="button" class="btn btn-success">Save</button>
-      <footer id="footer"></footer>
-    </main>
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script type="text/javascript">
-    $(function () {
-      $("#header").load("header.html");
-      $("#footer").load("footer.html");
-      $("#sidebar").load("acct-sidebar.html");
-    });
-  </script>
-</body>
-
-</html>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
+  <h1 class="h2">Settings</h1>
+</div>
+<table class="table table-sm">
+  <tbody>
+    <tr>
+      <th class="pt-3" scope="row">Name:</th>
+      <td class="pt-3"><input class="form-control" type="text" value="wiznaibus" /></td>
+    </tr>
+    <tr>
+      <th scope="row">Email Address:</th>
+      <td><input class="form-control" type="text" value="wiznaibuswaltz@gmail.com" /></td>
+    </tr>
+    <tr>
+      <th scope="row">Password:</th>
+      <td><input class="form-control" type="password" value="nevergonnagiveyouup" /></td>
+    </tr>
+    <tr>
+      <th scope="row">Confirm password:</th>
+      <td><input class="form-control" type="password" value="nevergonnagiveyouup" /></td>
+    </tr>
+  </tbody>
+</table>
+<button type="button" class="btn btn-success">Save</button>
