--- a/gom/go-order-form-2.html
+++ b/gom/go-order-form-2.html
@@ -1,154 +1,109 @@
-<!doctype html>
-<html lang="en">
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">Group Order</h1>
+</div>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link href="../dashboard.css" rel="stylesheet">
-    <title>wizGOM</title>
-</head>
-
-<body>
-
-    <header id="header"></header>
-
-    <div class="container">
-        <main role="main">
-            <div
-                class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Group Order</h1>
-            </div>
-
-            <div class="card text-center mt-3 mb-3">
-                <div class="card-body">
-                    <h1 class="display-4"><i class="small fas fa-check"></i> Order placed!</h1>
-                    <p class="lead">Please send payment for your order using one of <a
-                            href="user-profile.html">wiznaibus</a>'s accepted
-                        payment methods</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-5">
-
-                    <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
-                        <h4>Payment</h4>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">1st payment</h5>
-                            <!-- <p class="lead card-text"></p> -->
-                            <h1 class="display-4">$37.34</h1>
-                        </div>
-                        <div class="card-footer bg-success">
-                            <small class="text-white">Pay today</small>
-                        </div>
-                    </div>
-                    <table class="table table-sm table-borderless bg-light mt-3">
-                        <tbody>
-                            <tr>
-                                <th>PayPal</th>
-                                <td><a href="#">wiznaibuswaltz@gmail.com</a></td>
-                            </tr>
-                            <tr>
-                                <th>Zelle</th>
-                                <td><a href="#">wiznaibuswaltz@gmail.com</a></td>
-                            </tr>
-                            <tr>
-                                <th>Venmo</th>
-                                <td><a href="#">wiznaibuswaltz</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="col-7">
-                    <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
-                        <h4>Merchandise</h4>
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-striped table-sm">
-                            <tbody>
-                                <tr>
-                                    <th>Item</th>
-                                    <th>Quantity</th>
-                                    <th>Total</th>
-                                </tr>
-                                <tr>
-                                    <td>Slogan</td>
-                                    <td>2</td>
-                                    <td>$25.98</td>
-                                </tr>
-                                <tr>
-                                    <td>Sticker sheets</td>
-                                    <td>1</td>
-                                    <td>$4.61</td>
-                                </tr>
-                                <tr class="bg-primary text-white">
-                                    <td colspan="2">Subtotal</td>
-                                    <td>$30.59</td>
-                                </tr>
-                                <tr class="bg-white">
-                                    <td colspan="3"></td>
-                                </tr>
-                                <tr>
-                                    <td>Fees</td>
-                                    <td>Korgou fee (5% of order)<br />
-                                        PayPal G&S fee</td>
-                                    <td>$4.00<br />
-                                        $2.75
-                                    </td>
-                                </tr>
-                                <tr class="bg-primary text-white">
-                                    <th colspan="2" class="lead">Total</th>
-                                    <th class="lead">$37.34</th>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
-                                <h4>Ship to</h4>
-                            </div>
-                            <p class="bg-light">Wiznaibus Waltz<br />
-                                1013 Jimin Stan Avenue<br />
-                                Park City, UT 84060<br />
-                                United States</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <nav class="nav nav-pills flex-column flex-sm-row mt-5">
-                <a class="flex-sm-fill text-sm-center nav-link" href="go-listing.html">View group order listing</a>
-                <a class="flex-sm-fill text-sm-center nav-link" href="go-summary.html">View my orders</a>
-                <a class="flex-sm-fill text-sm-center nav-link" href="msg-inbox.html">Message GOM</a>
-            </nav>
-
-
-            <footer id="footer"></footer>
-        </main>
+<div class="card text-center mt-3 mb-3">
+    <div class="card-body">
+        <h1 class="display-4"><i class="small fas fa-check"></i> Order placed!</h1>
+        <p class="lead">Please send payment for your order using one of <a href="user-profile.html">wiznaibus</a>'s
+            accepted
+            payment methods</p>
     </div>
+</div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        $(function () {
-            $("#header").load("header.html");
-            $("#footer").load("footer.html");
-            $("#sidebar").load("gom-sidebar.html");
-        });
-    </script>
-</body>
+<div class="row">
+    <div class="col-5">
 
-</html>
+        <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
+            <h4>Payment</h4>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">1st payment</h5>
+                <!-- <p class="lead card-text"></p> -->
+                <h1 class="display-4">$37.34</h1>
+            </div>
+            <div class="card-footer bg-success">
+                <small class="text-white">Pay today</small>
+            </div>
+        </div>
+        <table class="table table-sm table-borderless bg-light mt-3">
+            <tbody>
+                <tr>
+                    <th>PayPal</th>
+                    <td><a href="#">wiznaibuswaltz@gmail.com</a></td>
+                </tr>
+                <tr>
+                    <th>Zelle</th>
+                    <td><a href="#">wiznaibuswaltz@gmail.com</a></td>
+                </tr>
+                <tr>
+                    <th>Venmo</th>
+                    <td><a href="#">wiznaibuswaltz</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-7">
+        <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
+            <h4>Merchandise</h4>
+        </div>
+        <div class="table-responsive">
+            <table class="table table-striped table-sm">
+                <tbody>
+                    <tr>
+                        <th>Item</th>
+                        <th>Quantity</th>
+                        <th>Total</th>
+                    </tr>
+                    <tr>
+                        <td>Slogan</td>
+                        <td>2</td>
+                        <td>$25.98</td>
+                    </tr>
+                    <tr>
+                        <td>Sticker sheets</td>
+                        <td>1</td>
+                        <td>$4.61</td>
+                    </tr>
+                    <tr class="bg-primary text-white">
+                        <td colspan="2">Subtotal</td>
+                        <td>$30.59</td>
+                    </tr>
+                    <tr class="bg-white">
+                        <td colspan="3"></td>
+                    </tr>
+                    <tr>
+                        <td>Fees</td>
+                        <td>Korgou fee (5% of order)<br />
+                            PayPal G&S fee</td>
+                        <td>$4.00<br />
+                            $2.75
+                        </td>
+                    </tr>
+                    <tr class="bg-primary text-white">
+                        <th colspan="2" class="lead">Total</th>
+                        <th class="lead">$37.34</th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
+                    <h4>Ship to</h4>
+                </div>
+                <p class="bg-light">Wiznaibus Waltz<br />
+                    1013 Jimin Stan Avenue<br />
+                    Park City, UT 84060<br />
+                    United States</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<nav class="nav nav-pills flex-column flex-sm-row mt-5">
+    <a class="flex-sm-fill text-sm-center nav-link" href="go-listing.html">View group order listing</a>
+    <a class="flex-sm-fill text-sm-center nav-link" href="go-summary.html">View my orders</a>
+    <a class="flex-sm-fill text-sm-center nav-link" href="msg-inbox.html">Message GOM</a>
+</nav>
