--- a/gom/manager/acct-notifications.html
+++ b/gom/manager/acct-notifications.html
@@ -20,13 +20,8 @@
 
     <div id="sidebar"></div>
 
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Open Orders</h1>
-      </div>
-
-      <footer id="footer"></footer>
-    </main>
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4"></main>
+    <footer class="col-md-9 ml-sm-auto col-lg-10 px-4" id="footer"></footer>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
@@ -40,8 +35,9 @@
   <script type="text/javascript">
     $(function () {
       $("#header").load("header.html");
-      $("#footer").load("footer.html");
-      $("#sidebar").load("gom-sidebar.html");
+      $("#footer").load("../footer.html");
+      $("main").load("../acct-notifications.html");
+      $("#sidebar").load("../acct-sidebar.html");
     });
   </script>
 </body>
