--- a/gom/manager/gom-dashboard.html
+++ b/gom/manager/gom-dashboard.html
@@ -127,7 +127,7 @@
   <script type="text/javascript">
     $(function () {
       $("#header").load("header.html");
-      $("#footer").load("footer.html");
+      $("#footer").load("../footer.html");
       $("#sidebar").load("gom-sidebar.html");
     });
   </script>
