--- a/gom/manager/gom-new-form-1.html
+++ b/gom/manager/gom-new-form-1.html
@@ -423,7 +423,7 @@ You will have 1 month to pay for your items upon receiving domestic before you l
   <script type="text/javascript">
     $(function () {
       $("#header").load("header.html");
-      $("#footer").load("footer.html");
+      $("#footer").load("../footer.html");
       $("#sidebar").load("gom-sidebar.html");
     });
   </script>
