--- a/gom/manager/header.html
+++ b/gom/manager/header.html
@@ -39,7 +39,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <a href="gom-new-form-1.html" class="btn btn-success my-2 my-sm-0">New Group Order</a>
+                <a href="gom-new-form-1.html" class="btn btn-primary my-2 my-sm-0">New Group Order</a>
                 <li class="nav-item">
                     <a class="nav-link" href="go-summary.html">My Purchases</a>
                 </li>
@@ -52,13 +52,13 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
             </form>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false"><img
-                            class="top-timeline-tweet-box-user-image avatar size32" src="../images/avatar.jpg"
+                            class="border border-primary" src="../images/avatar.jpg"
                             style="width:28px; height:28px; border-radius: 50%;" alt="wiznaibus"></a>
                     <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdown01">
                         <h6 class="dropdown-header">Welcome, wiznaibus</h6>
