--- a/gom/manager/user-profile.html
+++ b/gom/manager/user-profile.html
@@ -13,30 +13,13 @@
 </head>
 
 <body>
-
     <header id="header"></header>
+    <div class="container">
 
-    <div class="container-fluid">
+        <main role="main"></main>
 
-        <div id="sidebar"></div>
-
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <div
-                class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Group Order</h1>
-            </div>
-
-            <div class="card text-center mt-3 mb-3">
-                <div class="card-body">
-                    <h1 class="display-4"><i class="small fas fa-check"></i> Group order created!</h1>
-                    <p class="lead"><a href="go-listing.html">Click here</a> to view your new group order</p>
-                </div>
-            </div>
-            
-            <footer id="footer"></footer>
-        </main>
+        <footer id="footer"></footer>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -48,8 +31,8 @@
     <script type="text/javascript">
         $(function () {
             $("#header").load("header.html");
-            $("#footer").load("footer.html");
-            $("#sidebar").load("gom-sidebar.html");
+            $("#footer").load("../footer.html");
+            $("main").load("../user-profile.html");
         });
     </script>
 </body>
