--- a/gom/user/gom-register.html
+++ b/gom/user/gom-register.html
@@ -209,7 +209,7 @@
                                 her a lot</label>
                         </div>
                         <div class="form-group">
-                                <button type="button" class="btn btn-primary btn-lg btn-block mt-3">Register</button>
+                                <a href="../manager/index.html" class="btn btn-primary btn-lg btn-block mt-3">Register</a>
                         </div>
                         
                     </div>
