--- a/gom/go-history.html
+++ b/gom/go-history.html
@@ -1,3 +1,306 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
   <h1 class="h2">Purchase History</h1>
+  <div class="btn-group" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-secondary"><i class="fas fa-bars"></i></button>
+    <button type="button" class="btn btn-secondary"><i class="fas fa-th-large"></i></button>
+  </div>
+</div>
+
+
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
+  <div class="col p-0 mb-2">
+    <form class="form-inline">
+      <input type="text" class="form-control" placeholder="Search...">
+      <button type="button" class="btn btn-primary ml-2">Search</button>
+    </form>
+  </div>
+
+  <div class="col-2 p-0 mb-2">
+    <select class="form-control">
+      <option>Last 30 days</option>
+      <option>Last 90 days</option>
+      <option>Last year</option>
+      <option selected>All</option>
+    </select>
+  </div>
+
+</div>
+
+<table class="table table-striped table-sm">
+  <thead>
+    <tr>
+      <th>My Order #</th>
+      <th>Order Date</th>
+      <th>Group Order Name</th>
+      <th>GOM</th>
+      <th>Group Order Status</th>
+      <th>Order Status</th>
+      <th>Order Total</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="go-details.html">897654</a></td>
+      <td>2019/06/15</td>
+      <td><a href="go-details.html">Ddddddddddddddaeng!</a></td>
+      <td><a href="user-profile.html">GOM Master 2000</a></td>
+      <td>Accepting orders</td>
+      <td>Unconfirmed</td>
+      <td>$420.00</td>
+      <td class="text-right">
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+            <a class="dropdown-item text-danger" href="#">Cancel order</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><a href="go-details.html">892365</a></td>
+      <td>2019/05/02</td>
+      <td><a href="go-details.html">4th Muster Pins</a></td>
+      <td><a href="user-profile.html">GOM Master 2000</a></td>
+      <td>Production</td>
+      <td>Awaiting 2nd payment</td>
+      <td>$15.45</td>
+      <td class="text-right">
+        <button class="btn btn-sm btn-primary mb-1" href="#">Send 2nd payment</button>
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <!-- <a class="dropdown-item text-primary" href="#">Send payment</a> -->
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+            <a class="dropdown-item text-danger" href="#">Cancel order</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><a href="go-details.html">891776</a></td>
+      <td>2019/05/02</td>
+      <td><a href="go-details.html">bts armpit hair photobook</a> <span class="badge badge-danger">nsfw</span></td>
+      <td><a href="user-profile.html">nsfwiz</a></td>
+      <td>Shipping</td>
+      <td>Items shipped</td>
+      <td>$30.32</td>
+      <td class="text-right">
+        <button class="btn btn-sm btn-primary mb-1" href="#">Confirm shipment</button>
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <!-- <a class="dropdown-item text-primary" href="#">Send payment</a> -->
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+            <a class="dropdown-item text-danger" href="#">Cancel order</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><a href="go-details.html">890002</a></td>
+      <td>2019/04/30</td>
+      <td><a href="go-details.html">MOTS Persona + stickers</a></td>
+      <td><a href="user-profile.html">GOM Master 2000</a></td>
+      <td>Complete</td>
+      <td>Complete</td>
+      <td>$54.22</td>
+      <td class="text-right">
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <!-- <a class="dropdown-item text-primary" href="#">Send payment</a> -->
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><a href="go-details.html">881099</a></td>
+      <td>2019/04/29</td>
+      <td><a href="go-details.html">Map of the Soul: Persona (RANDOM PC ONLY)</a></td>
+      <td><a href="user-profile.html">shitty gom</a></td>
+      <td class="text-danger">Canceled</td>
+      <td>Refund confirmed</td>
+      <td>$12.29</td>
+      <td class="text-right">
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <!-- <a class="dropdown-item text-primary" href="#">Send payment</a> -->
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><a href="go-details.html">866363</a></td>
+      <td>2019/01/17</td>
+      <td><a href="go-details.html">Red Velvetine's photobook</a></td>
+      <td><a href="user-profile.html">reveluv001</a></td>
+      <td>EMS</td>
+      <td>2nd payment received</td>
+      <td>$30.86</td>
+      <td class="text-right">
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <!-- <a class="dropdown-item text-primary" href="#">Send payment</a> -->
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+            <a class="dropdown-item text-danger" href="#">Cancel order</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><a href="go-details.html">842365</a></td>
+      <td>2018/12/14</td>
+      <td><a href="go-details.html">jungkook bunny dolls~</a></td>
+      <td><a href="user-profile.html">totally innocent dollmaker</a></td>
+      <td>On hold</td>
+      <td>Order placed</td>
+      <td>$60.00</td>
+      <td class="text-right">
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <!-- <a class="dropdown-item text-primary" href="#">Send payment</a> -->
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+            <a class="dropdown-item text-danger" href="#">Cancel order</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><a href="go-details.html">842300</a></td>
+      <td>2018/12/13</td>
+      <td><a href="go-details.html">Jungkook dolls (18+ ONLY!!!!!)</a> <span class="badge badge-danger">nsfw</span></td>
+      <td><a href="user-profile.html">not-so-innocent dollmaker</a></td>
+      <td>Complete</td>
+      <td>Complete</td>
+      <td>$78.14</td>
+      <td class="text-right">
+        <button class="btn btn-sm btn-success mb-1" href="#">Give feedback</button>
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <!-- <a class="dropdown-item text-primary" href="#">Send payment</a> -->
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><a href="go-details.html">821239</a></td>
+      <td>2018/11/02</td>
+      <td><a href="go-details.html">assorted exo pins</a></td>
+      <td><a href="user-profile.html">GOM Master 2000</a></td>
+      <td>Complete</td>
+      <td>Complete</td>
+      <td>$125.88</td>
+      <td class="text-right">
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <!-- <a class="dropdown-item text-primary" href="#">Send payment</a> -->
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td><a href="go-details.html">740008</a></td>
+      <td>2018/03/10</td>
+      <td><a href="go-details.html">BTS RUN PINS & STICKERS</a></td>
+      <td><a href="user-profile.html">GOM Master 2000</a></td>
+      <td>Complete</td>
+      <td>Complete</td>
+      <td>$4.54</td>
+      <td class="text-right">
+        <div class="dropdown">
+          <button class="btn btn-sm btn-link dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Actions
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <!-- <a class="dropdown-item text-primary" href="#">Send payment</a> -->
+            <a class="dropdown-item" href="#">Order details</a>
+            <a class="dropdown-item" href="#">View group order</a>
+            <a class="dropdown-item" href="#">Message GOM</a>
+            <a class="dropdown-item" href="#">View GOM's profile</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+
+  </tbody>
+</table>
+
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
+  <span>Showing 1 to 10 of 57 entries</span>
+  <div class="btn-group" role="group" aria-label="Basic example">
+    <button type="button" class="btn btn-light disabled">Previous</button>
+    <button type="button" class="btn btn-primary selected">1</button>
+    <button type="button" class="btn btn-light">2</button>
+    <button type="button" class="btn btn-light">3</button>
+    <button type="button" class="btn btn-light">4</button>
+    <button type="button" class="btn btn-light">5</button>
+    <button type="button" class="btn btn-light">6</button>
+    <button type="button" class="btn btn-light">Next</button>
+  </div>
 </div>
