Fix inbox pages

--- a/gom/guest/index.html
+++ b/gom/guest/index.html
@@ -52,7 +52,7 @@
             <h2>Sell</h2>
             <p>Donec id elit non mi porta gravida at eget metus. You're one of the people who likes having way too much
               work to do and selling this shit. And for what? So people can buy this shit, or because you're a masochist. We may never know. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">Learn More <i
+            <p><a class="btn btn-secondary" href="acct-register.html" role="button">Learn More <i
                   class="fas fa-angle-right"></i></a></p>
           </div>
           <!-- <div class="col-md-4">
