--- a/gom/marketplace.html
+++ b/gom/marketplace.html
@@ -1,11 +1,11 @@
     <div class="jumbotron">
-        <div class="container">
+        <div class="container-fluid">
             <h1 class="display-3">Marketplace</h1>
             <p>All the best GOs from all the best GOMs</p>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid pl-5 pr-5">
         <div class="row">
             <div class="col-3">
                 <div id="sidebar">
