--- a/gom/go-details.html
+++ b/gom/go-details.html
@@ -19,11 +19,11 @@
   display: block;
   margin: 0 auto;
   background: #DFE3E4;
-  width: 3em;
-  height: 3em;
+  width: 2em;
+  height: 2em;
   text-align: center;
   margin-bottom: 0.25em;
-  line-height: 3em;
+  line-height: 2em;
   border-radius: 100%;
   position: relative;
   z-index: 1000;
@@ -35,7 +35,7 @@
   background: #DFE3E4;
   width: 100%;
   height: 0.5em;
-  top: 1.25em;
+  top: 0.75em;
   left: 50%;
   margin-left: 1.5em\9;
   z-index: -1;
@@ -108,10 +108,191 @@ a:hover {
   <h1 class="h2">Order Details</h1>
 </div>
 
+<div class="row">
+    <div class="col-7">
+        <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
+            <h4>Merchandise</h4>
+        </div>
+        <div class="table-responsive">
+            <table class="table table-striped table-sm">
+                <tbody>
+                    <tr>
+                        <th>Item</th>
+                        <th>Quantity</th>
+                        <th>Total</th>
+                    </tr>
+                    <tr>
+                        <td>Slogan</td>
+                        <td>2</td>
+                        <td>$25.98</td>
+                    </tr>
+                    <tr>
+                        <td>Sticker sheets</td>
+                        <td>1</td>
+                        <td>$4.61</td>
+                    </tr>
+                    <tr class="bg-primary text-white">
+                        <td colspan="2">Subtotal</td>
+                        <td>$30.59</td>
+                    </tr>
+                    <tr class="bg-white">
+                        <td colspan="3"></td>
+                    </tr>
+                    <tr>
+                        <td>Fees</td>
+                        <td>Korgou fee (5% of order)<br />
+                            PayPal G&S fee</td>
+                        <td>$4.00<br />
+                            $2.75
+                        </td>
+                    </tr>
+                    <tr class="bg-primary text-white">
+                        <th colspan="2" class="lead">Total</th>
+                        <th class="lead">$37.34</th>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+      </div>
+  <div class="col">
+      <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
+          <h4>Ship to</h4>
+      </div>
+      <p class="bg-light">Wiznaibus Waltz<br />
+          1013 Jimin Stan Avenue<br />
+          Park City, UT 84060<br />
+          United States</p>
+  </div>
+</div>
+
+<div class="col">
+    <div class="card">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+            <span class="badge badge-secondary">Order #21790</span>
+            <a href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
+                class="fas fa-ellipsis-v ml-1 mr-1"></i></a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+              <h6 class="dropdown-header">Actions</h6>
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#messageModal">Message</a>
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modifyOrderModal">Modify
+                order</a>
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#cancelOrderModal">Cancel
+                order</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-8">
+              <div
+                class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h3><a href="user-profile.html">wiznaibus</a></h3>
+              </div>
+              <table class="table table-striped table-sm small">
+                <tbody>
+                  <tr>
+                    <th>Qty</th>
+                    <th class="w-50">Item</th>
+                    <th>Cost</th>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>Slogan</td>
+                    <td>$12.99</td>
+                  </tr>
+                  <tr>
+                    <td>4</td>
+                    <td>Sticker sheets</td>
+                    <td>$18.45</td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>Fees</td>
+                    <td>$2.00</td>
+                  </tr>
+                  <tr class="bg-white">
+                    <td colspan="3"></td>
+                  </tr>
+                  <tr class="table-primary">
+                    <th>Total</th>
+                    <th></th>
+                    <th>$33.44</th>
+                  </tr>
+                  <tr class="table-primary">
+                    <th>EMS</th>
+                    <th></th>
+                    <th>$7.50</th>
+                  </tr>
+                  <tr class="table-primary">
+                    <th>Domestic</th>
+                    <th></th>
+                    <th class="form-inline">
+                      <input class="form-control form-control-sm mr-1 w-50" type="text" value="0"><button
+                        class="btn btn-sm small btn-primary"><i class="fas fa-check"></i></button></th>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-4">
+              <div class="row">
+                <div class="col">
+                  <div class="d-flex justify-content-between">
+                    <h4>Payment</h4>
+                  </div>
+                  <table class="table table-sm small">
+                    <tbody>
+                      <tr>
+                        <td>Order</td>
+                        <td>$33.44</td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                      </tr>
+                      <tr>
+                        <td>EMS</td>
+                        <td>$7.50</td>
+                        <td><button class="btn btn-sm small btn-success">Received</button></td>
+                      </tr>
+                      <tr>
+                        <td>Domestic</td>
+                        <td colspan="2" class="text-danger">NA</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="d-flex justify-content-between">
+                    <h4>Shipping</h4>
+                  </div>
+                  <p class="small">Wiznaibus Waltz<br />
+                    1013 Jimin Stan Avenue<br />
+                    Park City, UT 84060<br />
+                    United States</p>
+                  <button class="btn btn-sm btn-primary">Add Tracking</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <h4>Buyer Message</h4>
+              <p class="small">hey broski pls address to wiz and not my real name</p>
+            </div>
+            <div class="col">
+              <h4>Order Notes</h4>
+              <textarea class="form-control" rows="2"></textarea>
+              <button class="btn btn-primary btn-sm mt-2">Save</button>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
+
+
+
 <ol class="progress-alt">
     <!-- <li class="is-complete" data-step="1">Step 1</li> -->
-    <li class="is-active" data-step="1">Accepting Orders</li>
-    <li data-step="2">Finalizing Orders</li>
+    <li class="is-complete" data-step="1">Accepting Orders</li>
+    <li class="is-active" data-step="2">Finalizing Orders</li>
     <li data-step="3">Production</li>
     <li data-step="4">EMS</li>
     <li data-step="5">Processing</li>
