--- a/gom/guest/marketplace.html
+++ b/gom/guest/marketplace.html
@@ -29,7 +29,7 @@
 
     <main role="main" id="body"></main>
 
-    <div class="container">
+    <div class="container-fluid">
         <footer id="footer"></footer>
     </div>
 
